--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,9 @@
 name: Build the Twine game
+runs:
+  using: 'node16'
+  pre: 'setup.js'
+  main: 'index.js'
+  post: 'cleanup.js'
 
 on:
   push:
@@ -43,7 +48,7 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: 16
 
       - name: Test for presence of Windows codesigning secrets
         id: vars
